--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Jira Find issue key
+name: Jira Find issue key Action
 description: Find an issue inside event
 branding:
   icon: 'book-open'
