--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: Login
-      uses: atlassian/gajira-login@v3
+      uses: Justin-JHG/gajira-login@v1
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
         JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
